- UI issues. Using a calc() CSS function instead of manual screen height calculation ( it prevents screen flickering )

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,11 @@
+html, body {
+  height: calc(100% - 20px);
+}
+
+.app-content {
+  height: 100%;
+}
+
 .jqx-loader {
   z-index: 111 !important;
 }
